--- a/2022-10-07.tex
+++ b/2022-10-07.tex
@@ -1,6 +1,6 @@
-\paragraph{Procedure to learn a GLM}
+\subsection{Procedure to learn a GLM}
 
-Reference: "An introduction to GLMs" by A. Dobson and Barnett 4th edition
+Reference: \fullcite{dobson_introduction_2018}
 
 \newcommand{\dcheckmark}{\checkmark~\hspace{-0.9em}\checkmark}
 
