--- a/biblio.bib
+++ b/biblio.bib
@@ -1,3 +1,4 @@
+
 @book{aggarwal_neural_2018,
 	location = {Cham, Switzerland},
 	title = {Neural networks and deep learning: a textbook},
@@ -58,4 +59,16 @@
 	author = {Bishop, Christopher M.},
 	date = {2006},
 	keywords = {Aprenentatge automàtic, Intel·ligència artificial, Reconeixement de formes (Informàtica)},
+}
+
+@book{dobson_introduction_2018,
+	location = {Boca Raton},
+	edition = {4th edition},
+	title = {An Introduction to Generalized Linear Models},
+	isbn = {978-1-138-74151-5},
+	pagetotal = {376},
+	publisher = {Chapman and Hall/{CRC}},
+	author = {Dobson, Annette J. and Barnett, Adrian G.},
+	date = {2018-04-11},
+	file = {Dobson and Barnett - 2018 - An Introduction to Generalized Linear Models.pdf:/home/leix/Documents/Zotero/storage/VPC7H4PJ/Dobson and Barnett - 2018 - An Introduction to Generalized Linear Models.pdf:application/pdf},
 }
