--- a/001-preamble.tex
+++ b/001-preamble.tex
@@ -73,6 +73,7 @@
 %% REFERENCES (load order is important)
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\usepackage{imakeidx}
 \usepackage{varioref} % reference far away (1)
 \usepackage[colorlinks = true]{hyperref} % links in references (2)
 \usepackage{cleveref} % smart references (3)
