--- a/000-main.tex
+++ b/000-main.tex
@@ -121,6 +121,7 @@
 \include{2022-09-30} % Teoria
 \include{2022-10-07} % Teoria
 \include{theory/SVMs}
+\include{theory/complexity}
 
 % Problem sessions
 \include{2022-10-02}
