--- a/theory/complexity.tex
+++ b/theory/complexity.tex
@@ -28,11 +28,12 @@
 
 \begin{ex}
   Intervals on the real line ($d = 1$)
-
-  \begin{align*}
+  \begin{equation*}
     \mathcal{F} = \{[a,\,b]\mid a < b \in \mathds{R}\}
-  \end{align*}
+  \end{equation*}
 
+  The VC-dimension of $\mathcal{F}$ is $2$. With $m = 3$ points,
+  we cannot shatter it. But with $m = 2$ we can:
 \begin{figure}[H]
   \begin{tikzpicture}[
 			leftNode/.style={circle,minimum width=.5ex, fill=red,draw},
@@ -52,23 +53,38 @@
 
     \node[limitNodeL] at (0,0) {};
     \node[limitNodeR] at (4,0) {};
+    \draw[line width=2pt] (0,0) -- (4,0);
     \node[leftNode] at (1,0) {};
     \node[leftNode] at (3,0) {};
 
     \node[limitNodeL] at (0,1) {};
     \node[limitNodeR] at (2,1) {};
+    \draw[line width=2pt] (0,1) -- (2,1);
     \node[leftNode] at (1,1) {};
     \node[rightNode] at (3,1) {};
 
     \node[limitNodeL] at (-0.5,2) {};
     \node[limitNodeR] at (0.5,2) {};
+    \draw[line width=2pt] (-0.5,2) -- (0.5,2);
     \node[rightNode] at (1,2) {};
     \node[rightNode] at (3,2) {};
 
+    \matrix [draw,right] at (6,1) {
+      \node [leftNode,label=right:{$+1$}] {}; \\
+      \node [rightNode,label=right:{$-1$}] {}; \\
+    };
 
 	\end{tikzpicture}
 \end{figure}
 \end{ex}
+
+\begin{ex}
+  Axis aligned rectangles in $\mathds{R}^2$ ($d = 2$)
+  \begin{equation*}
+    \mathcal{F} = \{[a_1,\,b_1]\times [a_2,\,b_2]\mid a_1 < b_1,\, a_2 < b_2 \in \mathds{R}\}
+  \end{equation*}
+
+  The VC-dimension of $\mathcal{F}$ is $4$.
 
 \begin{figure}[H]
   \begin{tikzpicture}[
@@ -78,41 +94,46 @@
       limitNodeR/.style={draw,minimum width=0.25ex,minimum height=1ex,fill,label=$b$},
     ]
 
-    % \addlegendimage{leftNode};
-    % \addlegendentry{+1};
-    % \addlegendimage{rightNode};
-    % \addlegendentry{-1};
-
     \node[nodeIn] at (0, 1) {};
     \node[nodeIn] at (0, -1) {};
     \node[nodeOut] at (1, 0) {};
     \node[nodeOut] at (-1, 0) {};
     \draw (-0.5, -1.5) rectangle (0.5, 1.5);
+      \draw[<->] (-1.75, 1.75) -- (-1.75, -1.75) -- (1.75, -1.75);
 
-    \begin{scope}[shift={(4,0)}]
+    \begin{scope}[shift={(-4,0)}]
       \node[nodeIn] at (0, 1) {};
       \node[nodeIn] at (0, -1) {};
       \node[nodeOut] at (1, 0) {};
       \node[nodeIn] at (-1, 0) {};
     \draw (-1.5, -1.5) rectangle (0.5, 1.5);
+      \draw[<->] (-1.75, 1.75) -- (-1.75, -1.75) -- (1.75, -1.75);
     \end{scope}
 
-    \begin{scope}[shift={(4,4)}]
+    \begin{scope}[shift={(-4,-4)}]
       \node[nodeIn] at (0, 1) {};
       \node[nodeIn] at (0, -1) {};
       \node[nodeIn] at (1, 0) {};
       \node[nodeIn] at (-1, 0) {};
     \draw (-1.5, -1.5) rectangle (1.5, 1.5);
+      \draw[<->] (-1.75, 1.75) -- (-1.75, -1.75) -- (1.75, -1.75);
     \end{scope}
 
-    \begin{scope}[shift={(0,4)}]
+    \begin{scope}[shift={(0,-4)}]
       \node[nodeIn] at (0, 1) {};
     \draw (-0.5, 0.5) rectangle (0.5, 1.5);
       \node[nodeOut] at (0, -1) {};
       \node[nodeOut] at (1, 0) {};
       \node[nodeOut] at (-1, 0) {};
+      \draw[<->] (-1.75, 1.75) -- (-1.75, -1.75) -- (1.75, -1.75);
     \end{scope}
+
+    \matrix [draw,right] at (2,-2) {
+      \node [nodeIn,label=right:{$+1$}] {}; \\
+      \node [nodeOut,label=right:{$-1$}] {}; \\
+    };
 
 	\end{tikzpicture}
   \caption{Axis aligned rectangles in $\mathds{R}^2$}
 \end{figure}
+\end{ex}
