--- a/2022-09-30.tex
+++ b/2022-09-30.tex
@@ -55,7 +55,7 @@ Suppose we chose $\mathcal{F}, L, \Omega$ Questions:
 \subsection{Learning models} % (fold)
 
 \begin{align*}
-	x \in \mathcal{X} = \mathbb{R}^d & , \quad y \in \mathcal{Y} = \mathbb{R}                                            \\
+	x \in \mathcal{X} = \mathds{R}^d & , \quad y \in \mathcal{Y} = \mathds{R}                                            \\
 	f_{\text{basic model}}(x)        & = \omega_0 + \sum_{l = 1}^d \omega_l x_l, \quad \theta = \binom{\omega}{\omega_0}
 \end{align*}
 
