--- a/problems/2022-10-10.tex
+++ b/problems/2022-10-10.tex
@@ -57,7 +57,7 @@ The solution is the proportion of data points labeled with class $\omega_j$.
 \tcblower
 
 \begin{align*}
-  \hat\pi_j &= \frac{1}{n} \sum_{i=1}^n \mathbb{1}\left\{ y^i = j \right\} \\
+  \hat\pi_j &= \frac{1}{n} \sum_{i=1}^n \mathds{1}\left\{ y^i = j \right\} \\
   &= \frac{1}{n} \sum_{i=1}^n \tilde{y}_{ij}
 \end{align*}
 
