--- a/theory/complexity.tex
+++ b/theory/complexity.tex
@@ -137,3 +137,8 @@
   \caption{Axis aligned rectangles in $\mathds{R}^2$}
 \end{figure}
 \end{ex}
+
+\begin{note}
+  Radamaiher complexity encompases the VC-dimension adding
+  regression.
+\end{note}
